<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.samtech.autoseguro24siete.NotificacionesActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView12"
        android:layout_above="@+id/imageView11"
        android:layout_alignLeft="@+id/imageView11"
        android:layout_alignStart="@+id/imageView11"
        android:paddingBottom="10dp"
        android:src="@drawable/samtech"
        android:paddingTop="20dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/imageView11"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/franja_rojo_menu"
        android:scaleType="fitXY" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listNotif"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/texto_notif_superior"
                android:id="@+id/textView5"
                android:textSize="12sp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/txtPatente"
                        android:layout_weight="50"
                        android:gravity="center_vertical"
                        android:text="Encendido de motor"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp" />

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="30dp"
                        android:id="@+id/btnEncendidoMotor"
                        android:src="@drawable/off"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/texto_notif_encendido_motor"
                    android:id="@+id/textView6"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textView7"
                        android:layout_weight="50"
                        android:gravity="center_vertical"
                        android:text="Movimiento"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp" />

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="30dp"
                        android:id="@+id/btnMovimiento"
                        android:src="@drawable/off"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/texto_notif_movimiento"
                    android:id="@+id/textView8"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textView9"
                        android:layout_weight="50"
                        android:gravity="center_vertical"
                        android:text="Desconexión GPS"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp" />

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="30dp"
                        android:id="@+id/btnDesconexionGPS"
                        android:src="@drawable/off"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/texto_notif_desconex_gps"
                    android:id="@+id/textView10"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:visibility="gone">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textView11"
                        android:layout_weight="50"
                        android:gravity="center_vertical"
                        android:text="Apertura de puertas"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp" />

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="30dp"
                        android:id="@+id/btnPuertas"
                        android:src="@drawable/off"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/texto_notif_inferior"
                    android:id="@+id/textView13"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView12"
                    android:layout_weight="50"
                    android:gravity="center_vertical"
                    android:text="Alarmas"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="30dp"
                    android:id="@+id/btnAlarmas"
                    android:src="@drawable/off"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
