<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center|center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="499dp"
        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/titulo_login"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_form_bg"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="80dp"
                        android:layout_height="45dp"
                        android:contentDescription="icono_usuario"
                        android:src="@drawable/usuario_rojo" />

                    <EditText
                        android:id="@+id/usuario"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="-10dp"
                        android:background="#ffffffff"
                        android:hint="@string/prompt_usuario"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="80dp"
                        android:layout_height="45dp"
                        android:src="@drawable/clave_rojo" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="-10dp"
                        android:background="#ffffffff"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|end"
                android:orientation="horizontal"
                android:paddingRight="30dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="Recordar contraseña"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <ImageView
                    android:id="@+id/btn_interruptor"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/on" />
            </LinearLayout>

            <ImageView
                android:id="@+id/btn_ingresar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:alpha="1"
                android:contentDescription="Boton Ingresar"
                android:scaleType="fitStart"
                android:src="@drawable/boton_rojo_ingresar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="end"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/btn_olvide"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right|top"
                    android:src="@drawable/boton_olvide_contrasena" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvOlvide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:gravity="right"
                    android:text="Olvidé mi Contraseña"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B71C1C">

            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/logo_lobarnechea"
                    android:layout_marginRight="15dp"/>

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:adjustViewBounds="true"
                    android:paddingBottom="10dp"
                    android:paddingRight="0dp"
                    android:paddingTop="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo_samtech" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>



